# scrapeyard

./: .coverage  .dockerignore  .env.example  .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONCRETE_CLEANUP_PLAN.md  Dockerfile  HANDOFF.md  NEXT_SESSION_SLICE_A_PROMPT.md  NEXT_SESSION_SLICE_B_PROMPT.md  NOTE.md  README.md  SPEC.md  TECH-DEBT.md  USERGUIDE.md  WIDE_AUDIT_FINDINGS.md  docker-compose.test.yml  docker-compose.yml  project.yaml  pyproject.toml  template.yaml  work-order.template.yaml
.hermes/plans/: 2026-04-20_134629-dynamic-stealth-runtime-mismatch-plan.md
configs/eyebox/: brownells-optics.yaml  eurooptic-optics.yaml  opticsplanet-optics.yaml  primaryarms-optics.yaml  psa-optics.yaml
docs/: CTO-REVIEW-OPEN-ISSUES.md  DEPLOYMENT.md  SPEC.md  TECH-DEBT.md  TESTING-BACKLOG.md  TESTING-STRATEGY.md  TESTING.md  USERGUIDE.md
docs/plans/: 2026-03-08-adaptive-db-path-plan.md  2026-03-08-dockerfile-design.md  2026-03-08-dockerfile-plan.md  2026-03-08-fail-strategy-plan.md  2026-03-08-fastapi-lifespan-design.md  2026-03-08-fastapi-lifespan-plan.md  2026-03-08-result-retention-cleanup-design.md  2026-03-08-result-retention-cleanup-plan.md
docs/specs/: run-model-and-api-contract.md
docs/test-configs/: brownells-optics-smoke.yaml  brownells-optics-validation.yaml
examples/: basic-scrape.yaml  dynamic-consent-scroll.yaml  dynamic-product-grid.yaml  load-more-product-grid.yaml  scheduled-product-monitor.yaml
handoffs/: eyebox-agent-basspro-cabelas-scrapeyard-access-readout-2026-04-20.md  eyebox-opticsplanet-block-resolution-2026-04-05.md  eyebox-opticsplanet-handoff-2026-04-01.md  scrapeyard-next-session-2026-04-09.md  scrapeyard-slice-b-worker-decomposition-2026-04-05.md
issues/: 001-sqlite-write-amplification.md  002-job-update-full-row-rewrites.md  003-blocking-filesystem-on-event-loop.md  004-aggressive-sync-redis-polling.md  005-webhook-client-task-management.md  006-unbounded-admin-read-paths.md  007-health-query-scan.md  008-dead-code-candidates.md  README.md
scripts/: run_live_redis_tests.sh
sql/: 001_create_jobs.sql  002_create_errors.sql  003_create_results_meta.sql  004_create_job_runs.sql  005_add_indexes.sql  006_add_results_meta_indexes.sql  007_add_errors_indexes.sql  008_results_meta_unique_job_run.sql  009_create_webhook_outbox.sql  README.md
src/scrapeyard/: __init__.py  main.py
templates/: build-prompt.md  scope-prompt.md  verify-prompt.md
tests/: conftest.py
tests/integration/: conftest.py  test_admin_read_pagination.py  test_routes_validation.py  test_run_model_api.py  test_scheduled_job_lifecycle.py  test_scrape_lifecycle.py  test_webhook_lifecycle.py
tests/live_redis/: conftest.py  test_queue_lifecycle.py
tests/unit/: conftest.py  test_api_middleware.py  test_api_query_parsing.py  test_api_response_utils.py  test_api_scrape_submission.py  test_api_serializers.py  test_browser_debug_observability.py  test_browser_runtime_contract.py  test_cleanup.py  test_cleanup_loop.py  test_common_paths.py  test_common_time.py  test_config.py  test_config_edge_cases.py  test_database.py  test_database_reset.py  test_dependencies.py  test_detection.py  test_determine_final_status.py  test_dt.py  test_error_store.py  test_filesystem.py  test_formatters.py  test_health.py  test_ids.py  test_import_contracts.py  test_job_run_model.py  test_job_state.py  test_job_store.py  test_job_store_runs.py  test_logging.py  test_main.py  test_pool.py  test_proxy.py  test_queue_memory.py  test_rate_limiter.py  test_resilience.py  test_result_store.py  test_result_store_cleanup.py  (+28 more)
(+110 files in other folders)
