[tool.poetry]
name = "scrapeyard"
version = "0.1.0"
description = "Config-driven web scraping microservice built on Scrapling"
authors = []
readme = "README.md"
packages = [{include = "scrapeyard", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115.0"
uvicorn = {version = "^0.34.0", extras = ["standard"]}
scrapling = "^0.2"
arq = "^0.26"
apscheduler = "^3.10"
pyyaml = "^6.0"
aiosqlite = "^0.20"
pydantic = "^2.0"
pydantic-settings = "^2.0"
httpx = "^0.28"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.25"
ruff = "^0.9"
respx = "^0.22.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live_redis: exercises the real Redis-backed queue path",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
